# sql-query-anonymizer

./: .gitignore  CLI_USAGE.md  README.md  constants.py  pyproject.toml  test.json  test_utils.py  utils.py
.github/workflows/: publish.yml  tests.yml
data/0_raw/: messy_sql_1.sql  messy_sql_2.sql
data/_anonymized/: messy_sql_1a.sql  messy_sql_2a.sql
data/_deanonymized/: messy_sql_1_restored.sql
data/_optimized/: messy_sql_1o.sql  messy_sql_2o.sql
data/_raw/: messy_sql_1.sql  messy_sql_2.sql
src/sql_query_anonymizer/: __init__.py  cli.py  constants.py  helper_utilities.py  utils.py
tests/: test_anonymize.py  test_cli.py  test_utils.py
